--- a/src/styles/partials/_info.scss
+++ b/src/styles/partials/_info.scss
@@ -1,12 +1,25 @@
 .info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 32px 0px;
+
   @include desktop {
     margin-left: 110px;
-    padding: 80px 0px 100px 0;
+    padding: 80px 0px 100px 0 !important;
+  }
+}
+
+.info-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 80px 0px 100px 0px !important;
+
+  @include laptop {
+    margin-left: 110px !important;
+  }
+  @include desktop {
+    margin-left: 110px !important;
   }
 }
 
@@ -19,8 +32,18 @@
   line-height: 33.6px;
   padding-bottom: 32px;
 
+  @include laptop {
+    color: $Text-Blue;
+    font-family: Montserrat;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 67.2px;
+    max-width: 731px;
+  }
+
   @include desktop {
-    color: var(--Text-Blue, $Text-Blue);
+    color: $Text-Blue;
     font-family: Montserrat;
     font-size: 48px;
     font-style: normal;
@@ -38,6 +61,10 @@
   line-height: 21px;
   padding-bottom: 32px;
 
+  @include laptop {
+    font-size: 18px;
+    width: 731px;
+  }
   @include desktop {
     font-size: 18px;
     line-height: 27px;
@@ -47,6 +74,9 @@
 .btns {
   display: flex;
   gap: 8px;
+  @include laptop {
+    gap: 24px;
+  }
   @include desktop {
     gap: 24px;
   }
@@ -60,6 +90,10 @@
   padding: 14px;
   width: auto;
 
+  @include laptop {
+    padding: 20px !important;
+    width: 250px;
+  }
   @include desktop {
     width: 250px;
   }
