--- a/src/styles/partials/_our-initiatives.scss
+++ b/src/styles/partials/_our-initiatives.scss
@@ -4,42 +4,68 @@
   color: $Text-Blue;
 
   img {
-    transition: transform ease 1.4s;
+    width: 100%;
 
-    &:hover {
-      transform: scale(0.9);
+    @include tablet {
+      max-width: 100%;
+      height: auto;
     }
   }
 
   @include mobile {
     margin-top: 70px !important;
     padding-top: 32px !important;
-  }
 
-  &__title {
-    color: $Text-Blue;
-    font-family: Montserrat;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-align: center;
-    padding-bottom: 40px;
-  }
+    &__title {
+      color: $Text-Blue;
+      font-family: Montserrat;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      text-align: center;
+      padding-bottom: 40px;
+    }
 
-  &__descr {
-    color: $Text-Black;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
-    padding-bottom: 40px;
+    &__descr {
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 21px;
+      padding-bottom: 40px;
+    }
   }
+  @include tablet {
+    margin-top: 70px !important;
+    padding-top: 32px !important;
 
-  @include desktop {
+    &__title {
+      color: $Text-Blue;
+      font-family: Montserrat;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      text-align: center;
+      padding-bottom: 40px;
+    }
+
+    &__descr {
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 21px;
+      padding-bottom: 40px;
+    }
+  }
+  @include laptop {
     padding-top: 80px !important;
     padding-bottom: 80px !important;
+
     &__title {
       font-size: 48px;
       font-style: normal;
@@ -52,6 +78,26 @@
       font-size: 18px;
       line-height: 27px;
       padding-bottom: 63px;
+      width: 533px;
+    }
+  }
+  @include desktop {
+    padding-top: 80px !important;
+    padding-bottom: 80px !important;
+
+    &__title {
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      padding-bottom: 32px;
+    }
+
+    &__descr {
+      font-size: 18px;
+      line-height: 27px;
+      padding-bottom: 63px;
+      width: 533px;
     }
   }
 }
@@ -65,17 +111,17 @@
   }
   @include tablet {
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
     gap: 30px;
+    margin-bottom: 60px;
   }
   @include laptop {
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
     gap: 24px;
     margin-bottom: 48px;
   }
-
   @include desktop {
     display: flex;
     justify-content: space-around;
@@ -85,11 +131,9 @@
   &__item {
     background: #fff;
     display: flex;
-    width: 407px;
-    height: 100%;
+    height: auto;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
+    align-items: center;
     flex-shrink: 0;
     border-radius: 8px;
 
@@ -97,11 +141,23 @@
       margin-bottom: 30px;
     }
 
+    @include tablet {
+      width: calc(100% / 2 - 30px);
+    }
+
+    @include laptop {
+      width: calc(100% / 3 - 30px);
+    }
+
+    @include desktop {
+      width: calc(100% / 3 - 30px);
+    }
   }
 }
 
 .our-initiatives-card {
-  padding: 0 24px;
+  padding: 24px 16px;
+
   &__title {
     color: $Text-Black;
     font-family: Montserrat;
@@ -110,6 +166,15 @@
     font-weight: 500;
     line-height: normal;
     padding-bottom: 24px;
+
+    @include mobile {
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+    }
   }
 
   &__descr {
@@ -120,6 +185,22 @@
     font-weight: 400;
     line-height: 22.4px;
     padding-bottom: 17px;
+
+    @include mobile {
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 19.6px;
+    }
+  }
+
+  @include laptop {
+    padding: 24px 24px;
+  }
+  @include desktop {
+    padding: 24px 24px;
   }
 }
 
