--- a/src/styles/partials/_info.scss
+++ b/src/styles/partials/_info.scss
@@ -89,6 +89,14 @@
   font-weight: 500;
   padding: 14px;
   width: auto;
+  border-radius: 12px;
+  border: 2px solid $BTN-Blue;
+  color: #40639b; // BTN-Blue-2
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 
   @include laptop {
     padding: 20px !important;
