--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,15 @@ a {
   cursor: pointer;
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
 .container {
   margin: 0 auto;
   @include mobile {
