--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -109,6 +109,8 @@
 .contact-info-item {
   @include center;
   margin-right: 12px;
+  position: relative;
+  cursor: pointer;
   &__phone,
   &__mail {
     color: #fff;
@@ -118,8 +120,22 @@
     font-weight: 400;
     line-height: normal;
   }
+
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid transparent;
+    transition: border 1s ease;
+  }
+  &:hover {
+    &::after {
+      border-bottom: 1px solid orange;
+    }
+  }
 }
 
 .contact-info-item:last-child {
-  margin-left: 30px;
+  margin-left: 48px;
 }
