--- a/src/styles/partials/_requisites.scss
+++ b/src/styles/partials/_requisites.scss
@@ -1,6 +1,12 @@
 .requisites {
   padding-top: 80px;
   padding-bottom: 80px;
+
+  @include mobile {
+    .container {
+      padding: 0;
+    }
+  }
 }
 
 .requisites-container {
@@ -8,6 +14,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 
   &__title {
     color: $Text-Blue;
@@ -62,6 +70,8 @@
   padding-bottom: 80px;
   @include mobile {
     display: block;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -75,6 +85,12 @@
     font-weight: 400;
     line-height: 41.6px;
     margin-bottom: 64px;
+  }
+}
+
+.requisites-content:last-child {
+  @include mobile {
+    padding-top: 48px;
   }
 }
 
