--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,9 @@
 @import "./partials/_footer.scss";
 @import "./partials/_mobile-menu.scss";
 
+// blog
+@import "./layouts/_blog.scss";
+
 a {
   color: black;
   text-decoration: none;
