--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -83,9 +83,13 @@
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     margin-bottom: 16px;
+
+    &:first-child {
+      font-weight: 500;
+    }
 
     &:hover,
     &:focus {
