--- a/src/styles/partials/_activity.scss
+++ b/src/styles/partials/_activity.scss
@@ -26,8 +26,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
-    margin-top: 32px;
     margin-bottom: 32px;
+    @include mobile {
+      margin-top: 32px;
+    }
   }
 
   @include mobile {
@@ -38,6 +40,56 @@
   @include tablet {
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  @include laptop {
+    &-title {
+      color: $Text-Blue;
+      font-family: Montserrat;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      margin-bottom: 32px;
+      margin-top: 0px;
+      width: 438px;
+    }
+
+    &-descr {
+      width: 527px;
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 27px;
+      margin-bottom: 32px;
+      margin-top: 0px;
+    }
+  }
+
+  @include desktop {
+    &-title {
+      color: $Text-Blue;
+      font-family: Montserrat;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      margin-bottom: 32px;
+      width: 438px;
+    }
+
+    &-descr {
+      width: 527px;
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 27px;
+      margin-bottom: 32px;
+    }
   }
 
   &__item {
@@ -56,65 +108,16 @@
   img {
     width: -webkit-fill-available;
   }
-
-  @include laptop {
-
-    &-title {
-      color: $Text-Blue;
-      font-family: Montserrat;
-      font-size: 48px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-      margin-bottom: 32px;
-      width: 438px;
-    }
-
-    &-descr {
-      width: 527px;
-      color: $Text-Black;
-      font-family: Montserrat;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 27px;
-      margin-bottom: 32px;
-    }
-  }
-
-  @include desktop {
-    &-title {
-      color: $Text-Blue;
-      font-family: Montserrat;
-      font-size: 48px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-      margin-bottom: 32px;
-      width: 438px;
-    }
-
-    &-descr {
-      width: 527px;
-      color: $Text-Black;
-      font-family: Montserrat;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 27px;
-      margin-bottom: 32px;
-    }
-  }
 }
 
 .btn-more {
   display: block;
   text-align: center;
   width: 250px;
-  @include laptop {
-    margin-top: 34px;
-  }
-  @include desktop {
-    margin-top: 34px;
-  }
+  // @include laptop {
+  //   margin-top: 34px;
+  // }
+  // @include desktop {
+  //   margin-top: 34px;
+  // }
 }
