--- a/src/styles/partials/_info.scss
+++ b/src/styles/partials/_info.scss
@@ -53,7 +53,7 @@
   }
 }
 .info-descr {
-  color: $Text-Blue;
+  color: $Text-Black;
   font-family: Montserrat;
   font-size: 14px;
   font-style: normal;
