--- a/src/styles/layouts/blog/_materials.scss
+++ b/src/styles/layouts/blog/_materials.scss
@@ -3,56 +3,94 @@
   padding-bottom: 80px;
 
   &__title {
-    color: #121212;
+    color: $Text-Black;
     font-family: Montserrat;
-    font-size: 36px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 40px;
+
+    @include laptop;
+    @include desktop {
+      font-size: 36px;
+      margin-bottom: 40px;
+    }
   }
 }
 
 .materials-list-item {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   border-bottom: 1px solid #c6c6c6;
   padding-top: 32px;
   padding-bottom: 32px;
 
+  @include laptop;
+  @include desktop {
+    flex-direction: row;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  img {
+    @include mobile {
+      width: 100%;
+    }
+  }
+
   &__wrap {
-    padding-left: 30px;
+    @include laptop;
+    @include desktop {
+      padding-left: 30px;
+    }
   }
 
   &__title {
-    width: 625px;
-    color: $Text-Black;
-    font-family: Montserrat;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin-bottom: 16px;
-  }
-
-  &__descr {
-    width: 734px;
     color: $Text-Black;
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
-    margin-bottom: 16px;
+    margin-top: 24px;
+
+    @include laptop;
+    @include desktop {
+      width: 625px;
+      font-size: 24px;
+      margin-bottom: 16px;
+      margin-top: 0;
+    }
   }
 
-  .data-wrap {
-    color: #818181;
+  &__descr {
+    color: $Text-Black;
     font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 16px;
+
+    @include laptop;
+    @include desktop {
+      width: 734px;
+      font-size: 16px;
+      margin-bottom: 16px;
+    }
+  }
+
+  .data-wrap {
+    margin-top: 20px;
+
+    .data {
+      color: #818181;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
   }
 }
