--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -75,7 +75,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    margin-bottom: 16px;
+    &:hover {
+      color: #b3c7df;
+    }
   }
 
   &__link {
@@ -93,7 +95,7 @@
 
     &:hover,
     &:focus {
-      color: $hover-link;
+      color: #b3c7df;
     }
   }
 }
