--- a/src/styles/utils/_breadcrumbs.scss
+++ b/src/styles/utils/_breadcrumbs.scss
@@ -1,15 +1,30 @@
 .breadcrumbs {
-  padding-left: 80px;
-  padding-right: 80px;
   display: flex;
   padding-top: 24px;
+  padding-left: 20px;
+
+  @include laptop {
+    padding: 24px 80px 0 80px;
+  }
+  @include desktop {
+    padding: 24px 80px 0 80px;
+  }
 
   .breadcrumbs-wrap {
     display: flex;
     &__seperator {
       padding: 0 12px;
+      color: $Text-Black;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
     .breadcrumbs-link {
+      @include mobile {
+        font-size: 14px;  
+      }
       color: $Text-Black;
       font-family: Montserrat;
       font-size: 16px;
