--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,12 @@
 @import "./layouts/blog/blog";
 @import "./layouts/blog/materials";
 
+// project
+@import "./layouts/project/project";
+
+// public-offer
+@import "./layouts/public-offer/public-offer";
+
 a {
   color: black;
   text-decoration: none;
