--- a/src/styles/layouts/blog/_materials.scss
+++ b/src/styles/layouts/blog/_materials.scss
@@ -131,7 +131,7 @@
 .pagination-item-first {
   width: 40px;
   height: 40px;
-  background: #567dc2;
+  background: $BTN-Blue;
 
   a {
     color: white !important;
