--- a/src/styles/utils/_swiper.scss
+++ b/src/styles/utils/_swiper.scss
@@ -35,7 +35,7 @@
   position: absolute;
   background: rgba(255, 255, 255, 0.7);
   padding: 16px;
-  color: #121212;
+  color: $Text;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 400;
