--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,14 +1,15 @@
 // $colors
 
-$Text-Black:#080808;
-$Bg-neutrals:#28354F;
-$Text-Blue: #07285D;
+$Text-Black: #080808;
+$Bg-neutrals: #28354f;
+$Text-Blue: #07285d;
 // #D0D0D0
 // #F6F7FB
 // #F5F5F5
-$Text-White: #F9F9F9;
-// #FFFFFF
-$hover-link: #40639B;
-$BTN-Blue: #567DC2;
+$Text-White: #f9f9f9;
+$White: #ffffff;
+$Hover-Link: #40639b;
+$BTN-Blue: #567dc2;
+$Text: #121212;
 
-$system: #E52929;
+$System: #e52929;
