--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,10 @@
 @import "./layouts/project/project";
 
 // public-offer
+
 @import "./layouts/public-offer/public-offer";
+// about-us
+@import "./layouts/about-us/about-us";
 
 a {
   color: black;
@@ -72,6 +75,10 @@ svg {
   max-width: 100%;
   padding: 0;
   margin: 0;
+}
+
+.logo-mobile-menu svg {
+  fill: $BTN-Blue;
 }
 
 .current {
