--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,10 +26,13 @@
 @import "./layouts/project/project";
 
 // public-offer
-
 @import "./layouts/public-offer/public-offer";
+
 // about-us
 @import "./layouts/about-us/about-us";
+
+// contacts
+@import "./layouts/contacts/contacts";
 
 a {
   color: black;
