--- a/src/styles/layouts/blog/_blog-project.scss
+++ b/src/styles/layouts/blog/_blog-project.scss
@@ -15,29 +15,111 @@
       font-size: 24px;
     }
   }
-}
 
-.blog-project-list {
-  padding-top: 84px;
+  .blog-project-list {
+    padding-top: 84px;
 
-  .blog-project-list-item {
-    display: flex;
-    gap: 30px;
+    .blog-project-list-item {
+      display: flex;
+      gap: 30px;
 
-    &__descr {
-      color: $Text-Black;
-      font-family: Montserrat;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 22.4px;
-      width: 516px;
-      height: 327px;
-      flex-shrink: 0;
+      &__descr {
+        color: $Text-Black;
+        font-family: Montserrat;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22.4px;
+        width: 516px;
+        height: 327px;
+        flex-shrink: 0;
+      }
     }
   }
 }
 
-.comments{
+.comments {
   padding-bottom: 100px;
+  border-radius: 8px;
+
+  &__title {
+    color: $Text-Blue;
+    font-family: Montserrat;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-bottom: 40px;
+  }
+}
+
+.comments-wrap {
+  display: flex;
+  justify-content: space-around;
+  gap: 30px;
+}
+
+.comments-info {
+  &__title {
+    color: $Text-Blue;
+    font-family: Montserrat;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 12px;
+  }
+
+  &__descr {
+    width: 384px;
+    color: $Text-Black;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 40px;
+  }
+}
+
+form {
+  max-width: 841px;
+  margin: 0 auto;
+}
+
+label {
+  display: block;
+  margin-bottom: 16px;
+}
+
+input,
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  padding: 10px 16px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid var(--Stroke, #d0d0d0);
+  background: #fff;
+}
+
+input[type="checkbox"] {
+  width: 24px;
+  height: 24px;
+}
+
+.content-bg {
+  background: #f6f7fb;
+  padding: 48px;
+}
+
+.form {
+  .comments-wrap {
+    margin-bottom: 24px;
+    div {
+      width: 100%;
+    }
+  }
 }
