--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,7 +3,7 @@
 $Text-Black: #080808;
 $Bg-neutrals: #28354f;
 $Text-Blue: #07285d;
-// #D0D0D0
+$Stroke: #d0d0d0;
 // #F6F7FB
 // #F5F5F5
 $Text-White: #f9f9f9;
@@ -11,5 +11,5 @@ $White: #ffffff;
 $Hover-Link: #40639b;
 $BTN-Blue: #567dc2;
 $Text: #121212;
-
+$Text-Placeholder: #595959;
 $System: #e52929;
