--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -53,9 +53,9 @@
     font-weight: 400;
     line-height: 24px;
 
-    @include mobile {
-      text-align: center;
-    }
+    // @include mobile {
+    //   text-align: center;
+    // }
   }
 
   &__title {
