--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -45,7 +45,7 @@
     align-items: flex-start;
     text-align: left;
     gap: 8px;
-    width: 205px;
+    // width: 205px;
     color: #fff;
     font-family: Montserrat;
     font-size: 16px;
