add styles with contacts-form and fix

--- a/src/styles/layouts/blog/_materials.scss
+++ b/src/styles/layouts/blog/_materials.scss
@@ -97,7 +97,10 @@
 
 .materials-list-link {
   display: flex;
-  flex-direction: column;
+
+  @include mobile {
+    flex-direction: column;
+  }
 }
 
 .pagination {
