--- a/src/styles/layouts/autobiography/_autobiography.scss
+++ b/src/styles/layouts/autobiography/_autobiography.scss
@@ -14,6 +14,7 @@
     font-weight: 500;
     line-height: normal;
     margin-bottom: 52px;
+
     @include mobile {
       font-size: 24px;
       margin-bottom: 34px;
@@ -28,6 +29,9 @@
     font-weight: 400;
     line-height: normal;
     margin-bottom: 30px;
+    width: 625px;
+    text-align: left;
+    margin: 0 auto;
 
     @include mobile {
       font-size: 14px;
@@ -37,6 +41,7 @@
 }
 
 .autobiography-wrap {
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 
@@ -70,7 +75,7 @@
       font-weight: 400;
       line-height: 36px;
       text-align: left;
-      
+
       @include mobile {
         font-size: 14px;
         line-height: 21px;
