--- a/src/styles/layouts/contacts/_contacts.scss
+++ b/src/styles/layouts/contacts/_contacts.scss
@@ -61,3 +61,234 @@
   display: flex;
   margin-bottom: 111px;
 }
+
+.contacts-form {
+  margin-bottom: 100px;
+  input {
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 15px 16px;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid $Stroke;
+    background: #fff;
+    color: $Text-Placeholder;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    @include mobile {
+      font-size: 12px;
+    }
+  }
+
+  textarea {
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding: 16px 16px;
+    border: 1px solid $Stroke;
+    background: #fff;
+    resize: none;
+    color: $Text-Placeholder;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 844px;
+    height: 156px;
+    padding: 16px;
+
+    &:hover {
+      border-radius: 8px;
+      border: 1px solid var(--Text-Black, #080808);
+      background: #fff;
+    }
+  }
+}
+
+.contacts-info {
+  margin-bottom: 32px;
+
+  &__descr {
+    color: var(--Text-Black, #080808);
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 12px;
+    text-align: center;
+  }
+}
+
+.contacts-wrap {
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  div {
+    width: 100%;
+  }
+}
+
+/* Стили для радиобаттонов */
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"] + label {
+  position: relative;
+  padding-left: 30px; /* Отступ для учета размера круга */
+  cursor: pointer;
+}
+
+input[type="radio"] + label:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  border: 2px solid #080808; /* Цвет рамки круга */
+  border-radius: 50%;
+  background-color: white; /* Цвет фона баттона */
+}
+
+input[type="radio"]:checked + label:before {
+  background-color: white; /* Цвет фона баттона при выборе */
+}
+
+input[type="radio"]:checked + label:after {
+  content: "";
+  position: absolute;
+  left: 5px; /* Отступ для круга внутри баттона */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 9px; /* Диаметр круга внутри баттона */
+  height: 9px; /* Диаметр круга внутри баттона */
+  border-radius: 50%;
+  background-color: #080808; /* Цвет круга внутри баттона при выборе */
+}
+
+/* Стили для лейблов */
+label {
+  color: $Text-Black;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+}
+
+/* Дополнительные стили для обертки */
+.wrap-label-communication {
+  display: flex;
+  flex-direction: column;
+
+  &__title {
+    color: $Text-Black;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+}
+
+.wrap-label-contacts,
+.wrap-label-select,
+.wrap-label-communication {
+  margin-top: 24px;
+}
+
+.wrap-contacts-btn {
+  margin-top: 32px;
+  display: flex;
+  justify-content: center;
+}
+
+// CUSTOM-SELECT
+
+/* Стили для кастомного селекта */
+.custom-select {
+  position: relative;
+  width: 200px; /* Измените ширину по вашему усмотрению */
+  overflow: hidden;
+}
+
+.select-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  background-image: linear-gradient(45deg, transparent 50%, #333 50%),
+    linear-gradient(135deg, #333 50%, transparent 50%);
+  background-position:
+    calc(100% - 12px) calc(1em + 2px),
+    calc(100% - 8px) calc(1em + 2px);
+  background-size:
+    5px 5px,
+    5px 5px;
+  background-repeat: no-repeat;
+
+  color: $Text-Placeholder;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.select-arrow {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-color: #333 transparent transparent transparent;
+}
+
+/* Скрыть стандартный стрелочный блок браузера */
+select::-ms-expand {
+  display: none !important;
+}
+
+/* Стили для кастомных option */
+select option {
+  background-color: #fff;
+  color: #333;
+
+  color: var(--Text-Placeholder, #595959);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+/* Подсветка при наведении на option */
+select option:hover {
+  background-color: #f2f2f2;
+}
