--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -123,19 +123,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-  }
 
-  &:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 30px;
-    border-bottom: 1px solid transparent;
-    transition: border 1s ease;
-  }
-  &:hover {
-    &::after {
-      border-bottom: 1px solid orange;
+    &:hover {
+      color: #b3c7df;
     }
   }
 }
